<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ganesh.ShareRide.MainActivity">

    <TextView
        android:id="@+id/textTotalExpLabel"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/total_expense"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textTotalExpenseValue"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_marginEnd="24dp"
        android:text="0"
        android:textAlignment="viewStart"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/textTotalExpLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textTotalExpLabel" />

    <Button
        android:id="@+id/buttonAddExpense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:layout_marginEnd="9dp"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/add_expense"
        android:textAllCaps="false"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonViewExpense"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonEditMembers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/manage_members"
        android:textAllCaps="false"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonViewExpense" />

    <Button
        android:id="@+id/buttonViewExpense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/view_expense"
        android:textAllCaps="false"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonEditMembers"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonAddExpense" />

    <TextView
        android:id="@+id/textPerHead"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/expense_per_head"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTotalExpLabel" />

    <TextView
        android:id="@+id/textExpPerHeadVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="24dp"
        android:text="0"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTotalExpenseValue" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="fill_parent"
        android:layout_height="26dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPerHead">

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/lato_bold"
            android:gravity="center"
            android:text="@string/name"
            android:textSize="14sp"
            android:textStyle="normal|bold"
            tools:fontFamily="@font/lato_bold"></TextView>

        <TextView
            android:id="@+id/textViewAmountSpent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="22dp"
            android:layout_toStartOf="@+id/textViewExcessDeficit"
            android:fontFamily="@font/lato_bold"
            android:gravity="center"
            android:text="@string/amount_spent"
            android:textStyle="normal|bold"></TextView>

        <TextView
            android:id="@+id/textViewExcessDeficit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="18dp"
            android:fontFamily="@font/lato_bold"
            android:gravity="center"
            android:text="@string/excess_deficit"
            android:textSize="14sp"
            android:textStyle="normal|bold"></TextView>

    </RelativeLayout>

    <ListView
        android:id="@+id/expSumListView"
        android:layout_width="368dp"
        android:layout_height="209dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

</android.support.constraint.ConstraintLayout>
